# CppMatrixLibrary

./: .gitignore  .gitignore.swp  CMakeLists.txt  ChangeLog  Doxyfile  EMatrix.h  LICENSE  Makefile  README.md  TODO  readme_example.cpp  test_EMatrix.cpp
tests_cpp/: CMakeLists.txt  test_ematrix.cpp
tests_py/: CMakeLists.txt  README.md  test_EMatrix.cpp  test_EMatrix.py  test_assertion_errors.cpp  test_assertion_errors.py  test_compilation_errors.cpp  test_compilation_errors.py  test_ctors.cpp  test_ctors.py
